# hermes-ouroboros

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DAY1.md  DAY2.md  DAY3.md  DAY4.md  DAY5.md  DAY6.md  DAY7.md  DAY8.md  DAY9.md  DEMO_SCRIPT.md  Dockerfile  README.md  SUBMISSION.md  config.yaml  main.py  requirements.txt  test_modal.py  test_orchestrator.py  test_parallel.py  test_web_security.py
agents/: __init__.py  advocate.py  arbiter.py  base.py  contrarian.py  oracle.py  skeptic.py
benchmark/: claims.json  common.py  compare.py  questions.json  results_v0.json  results_v1.json  results_v5.json  run_benchmark.py  run_benchmark_hermes.py  run_benchmark_v1.py  run_council_vs_solo.py
core/: agent_launcher.py  api_key_store.py  arbiter_prompt.py  auth.py  claim_extractor.py  claim_ledger.py  claim_store.py  conflict_resolver.py  drift_monitor.py  email_service.py  feedback_store.py  learned_guidance.py  master_orchestrator.py  memo_generator.py  mode_prompts.py  runtime_router.py  session_store.py  settings.py  skill_creator.py  source_trust.py  telegram_bot.py  telegram_delivery.py  user_store.py  verdict_parser.py  watchlist_store.py  web_app.py  web_search.py  workspace_store.py
dashboard/: stats.py
deploy/: Caddyfile.example  DEPLOYMENT.md  docker-compose.proxy.yml  docker-compose.yml
deployment/: modal_inference.py  test_modal_inference.py
extension/: autoscan.css  autoscan.js  background.js  generate-icons.js  manifest.json  options.html  popup.js  (+3 more)
sdk/: README.md  pyproject.toml
sdk/hermes_ouroboros/: __init__.py  client.py  models.py
(+143 files in other folders)
