[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-ouroboros"
version = "0.1.0"
description = "Python SDK for HERMES Adversarial Intelligence Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.25.0"]
keywords = ["ai", "adversarial", "fact-checking", "hermes"]

[project.urls]
Homepage = "https://hermes-ouroboros.online"
Repository = "https://github.com/Ridwannurudeen/hermes-ouroboros"
